<resources>
    <string name="app_name">eCredit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">eKhata</string>
    <string name="nav_header_subtitle">Your digital Ledger Account</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add_new_customer">Add Customer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Name</string>
    <string name="name_of_the_person">Customer\'s Name</string>
    <string name="save">Save</string>
    <string name="connect_contact">CONNECT CONTACT</string>
    <string name="date">Date</string>
    <string name="customer_s_contact_number">Contact Number</string>
    <string name="this_is_demo_image">This is Demo Image</string>
    <string name="delete">delete</string>
    <string name="you_got">You Got</string>
    <string name="you_gave">You Gave</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_notes">Add Notes(Optional)</string>
    <string name="text_message">Text Message</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="balance_available">Balance Available</string>
    <string name="balance_due">Balance Due</string>
    <string name="export_data_into_csv_file">Export Data</string>
    <string name="communicate">Communicate</string>
    <string name="export_csv_file_now">Export Data into CSV File Now</string>
    <string name="taking_backup_ensures_that_your_data_is_safe_it_is_advised_to_take_backup_at_regular_intervals">Taking Backup ensures that your data is safe.\nIt is advised to take backup at regular intervals.</string>
    <string name="customers">My Customers</string>
    <string name="all_transactions">All Transactions</string>
    <string name="start_by_adding_a_new_customer">Start By Adding a New Customer</string>
    <string name="text_share">Share this App with your friends and family</string>
    <string name="share_now">Share Now</string>
    <string name="share_text">Hey,\nI\'m using this great app to manage all my transactions. Its convenient and easy to use. \n Download the App now \n https://www.google.com</string>
    <string name="text_settled">All Settled</string>

</resources>
