<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.AddBirthdayFragment">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_panda"
                app:layout_constraintBottom_toTopOf="@+id/tvName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <ImageView
                android:id="@+id/ivEditPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_button"
                android:src="@drawable/ic_edit_black_24dp"
                android:tint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/ivProfileImage"
                app:layout_constraintEnd_toEndOf="@+id/ivProfileImage"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/ivProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="8dp"
                android:paddingBottom="16dp"
                android:text="@string/name"
                android:textColor="#2f3847"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/tvPhone"
                app:layout_constraintEnd_toStartOf="@+id/etName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name_of_the_person"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvName"
                app:layout_constraintTop_toTopOf="@+id/tvName" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="8dp"
                android:paddingBottom="16dp"
                android:text="Contact"
                android:textColor="#2f3847"
                android:textSize="16sp"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toTopOf="@+id/partitionView"
                app:layout_constraintEnd_toStartOf="@+id/etPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/customer_s_contact_number"
                android:inputType="phone"
                android:paddingStart="8dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvPhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvPhone"
                app:layout_constraintTop_toTopOf="@+id/tvPhone" />

            <View
                android:id="@+id/partitionView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPhone"
                app:layout_constraintBottom_toTopOf="@+id/tvConnectContact" />

            <TextView
                android:id="@+id/tvConnectContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableTop="@drawable/ic_attachment_white_24dp"
                android:drawableTint="@android:color/black"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/connect_contact"
                android:textColor="#2f3847"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/btnSave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/partitionView"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif-medium"
                android:text="@string/save"
                android:textColor="#fff"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvConnectContact" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>